--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,7 @@ minima:
   social_links:
     twitter: YvesBarmaz
     github: ybarmaz
+    linkedin: yves-barmaz-454a8a6
 
 # Set this to true to get LaTeX math equation support
 use_math: true
