--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,7 @@ minima:
     twitter: YvesBarmaz
     github: ybarmaz
     linkedin: yves-barmaz-454a8a6
+    instagram: naxadventurextreme
 
 # Set this to true to get LaTeX math equation support
 use_math: true
