--- a/_config.yml
+++ b/_config.yml
@@ -48,10 +48,10 @@ minima:
 use_math: true
 
 # Set this to true to display the summary of your blog post under your title on the Home page.
-show_description: false
+show_description: true
 
 # Set this to true to display image previews on home page, if they exist
-show_image: false
+show_image: true
 
 # Set this to true to turn on annotations with hypothes.is (https://web.hypothes.is/)
 annotations: false
